# samplegit

./: anomaly_logs.csv  main.py  network_anomaly.py  pyproject.toml  raw_llm_responses.txt  requirements.txt  server.py
.streamlit/: secrets.toml
